[package]
name = "pgcat"
version = "1.1.2-dev4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arc-swap = "1"
async-trait = "0.1"
atomic_enum = "0.2.0"
base64 = "0.21"
bb8 = "0.8.1"
bytes = "1"
chrono = "0.4"
clap = { version = "4.3.1", features = ["derive", "env"] }
exitcode = "1.1.2"
fallible-iterator = "0.2"
futures = "0.3"
hmac = "0.12"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
lru = "0.12.0"
md-5 = "0.10"
nix = "0.26.2"
num_cpus = "1"
once_cell = "1"
parking_lot = "0.12.1"
phf = { version = "0.11.1", features = ["macros"] }
pin-project = "1"
postgres-protocol = "0.6.5"
rand = "0.8"
regex = "1"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
sha-1 = "0.10"
sha2 = "0.10"
socket2 = { version = "0.4.7", features = ["all"] }
sqlparser = { version = "0.41", features = ["visitor"] }
stringprep = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
toml = "0.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter", "std"] }
trust-dns-resolver = "0.22.0"
webpki-roots = "0.23"

[dev-dependencies]
tokio-test = "0.4.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"
